first commit for the outline + small typo fix for lecturers

--- a/website/mshr/course-outline.html
+++ b/website/mshr/course-outline.html
@@ -185,7 +185,7 @@
       </div>
     </li>
     <li>
-      <div class="timeline-badge first1">1</div>
+      <div class="timeline-badge first1">3</div>
       <div class="timeline-panel">
         <div class="timeline-heading">
           <h4 class="timeline-title">11 – 17 May 2020</h4>
@@ -193,8 +193,8 @@
         </div>
         <div class="timeline-body">
           <p>
-            <br><a class="titolo_gc_europe" href="{{link_url::316}}#jt" title="Jorge Taiana">Jorge Taiana</a>,<span class="maiuscoletto">latma</span> Programme Director
-            <br><a class="titolo_gc_europe" href="{{link_url::316}}#nc" title="Nora Cortiña">Nora Cortiña</a>, Founder of the movement Mothers of Plaza de Mayo
+            <br><a class="titolo_gc_europe" href="{{link_url::316}}#jt" title="Jorge Taiana">Jorge Taiana</a>, <span class="maiuscoletto">latma</span> Programme Director
+            <br><a class="titolo_gc_europe" href="{{link_url::316}}#nc" title="Nora Cortiñas">Nora Cortiñas</a>, Founder of the movement Mothers of Plaza de Mayo
             <br><a class="titolo_gc_europe" href="{{link_url::316}}#jd" title="Jelena Đureinović">Jelena Đureinović</a>, PhD Candidate at Justus Liebig University
             <!-- <br><a class="titolo_gc_europe" href="{{link_url::316}}#bm" title="Benyam Mezmur">Benyam Mezmur</a>, CRC Committee
             <br><a class="titolo_gc_europe" href="{{link_url::316}}#vt" title="Vitit Muntarbhorn">Vitit Muntarbhorn</a>, Chulalongkorn University -->
@@ -208,19 +208,55 @@
 
 <ul class="timeline">
    <li class="timeline-inverted">
-      <div class="timeline-badge third3">2</div>
+      <div class="timeline-badge third3">4</div>
       <div class="timeline-panel">
         <div class="timeline-heading">
-          <h4 class="timeline-title">25 November - 1 December 2019</h4>
-          <h4 class="timeline-title">Cross-cutting themes of the Global Study</h4>
+          <h4 class="timeline-title">18 – 24 May 2020</h4>
+          <h4 class="timeline-title">Competing histories and truths: challenges in the creation of memory sites</h4>
         </div>
         <div class="timeline-body">
 	      <p>
-		    <br><a class="titolo_gc_europe" href="{{link_url::316}}#mn" title="Manfred Nowak">Manfred Nowak</a>, SG Global Campus of Human Rights / Global Study Independent Expert - <strong>Webinar</strong>
-      		<br><a class="titolo_gc_europe" href="{{link_url::316}}#uk" title="Ursula Kilkelly">Ursula Kilkelly</a>, University College Cork
+		    <br><a class="titolo_gc_europe" href="{{link_url::316}}#pt" title="Patricia Tappatá Valdez">Patricia Tappatá Valdez</a>, Director of the CIPDH
+      	<!-- <br><a class="titolo_gc_europe" href="{{link_url::316}}#uk" title="Ursula Kilkelly">Ursula Kilkelly</a>, University College Cork
 	  		<br><a class="titolo_gc_europe" href="{{link_url::316}}#cda" title="Catalina Devandas Aguilar">Catalina Devandas Aguilar</a>, UN Special Rapporteur on persons with disabilities
 	  		<br><a class="titolo_gc_europe" href="{{link_url::316}}#mgt" title="Meskerem Geset Tachune">Meskerem Geset Tachunek</a>, UN Working Group on Discrimination against Women
-	  		<br><a class="titolo_gc_europe" href="{{link_url::316}}#sk" title="Stuart Kinner">Stuart Kinner</a>, University of Melbourne
+	  		<br><a class="titolo_gc_europe" href="{{link_url::316}}#sk" title="Stuart Kinner">Stuart Kinner</a>, University of Melbourne -->
+          </p>
+        </div>
+      </div>
+    </li>
+    <li>
+      <div class="timeline-badge first1">5</div>
+      <div class="timeline-panel">
+        <div class="timeline-heading">
+          <h4 class="timeline-title">25 – 31 May 2020</h4>
+          <h4 class="timeline-title">Memory and (re)construction of identity knowledge</h4>
+        </div>
+        <div class="timeline-body">
+          <p>
+            <br><a class="titolo_gc_europe" href="{{link_url::316}}#vt" title="Vesna Teršelić">Vesna Teršelić</a>, Director of Documenta - Right Livelihood Award Laureate
+            <!-- <br><a class="titolo_gc_europe" href="{{link_url::316}}#nc" title="Nora Cortiña">Nora Cortiña</a>, Founder of the movement Mothers of Plaza de Mayo
+            <br><a class="titolo_gc_europe" href="{{link_url::316}}#jd" title="Jelena Đureinović">Jelena Đureinović</a>, PhD Candidate at Justus Liebig University
+            <br><a class="titolo_gc_europe" href="{{link_url::316}}#bm" title="Benyam Mezmur">Benyam Mezmur</a>, CRC Committee
+            <br><a class="titolo_gc_europe" href="{{link_url::316}}#vt" title="Vitit Muntarbhorn">Vitit Muntarbhorn</a>, Chulalongkorn University -->
+            </p>
+        </div>
+      </div>
+    </li>
+    <li class="timeline-inverted">
+      <div class="timeline-badge third3">6</div>
+      <div class="timeline-panel">
+        <div class="timeline-heading">
+          <h4 class="timeline-title">1 – 7 June 2020</h4>
+          <h4 class="timeline-title">Sites of conscience: forum for dialogue, inspiration and action</h4>
+        </div>
+        <div class="timeline-body">
+        <p>
+        <br><a class="titolo_gc_europe" href="{{link_url::316}}#vb" title="Valeria Barbuto">Valeria Barbuto</a>, Anthropologist
+        <!-- <br><a class="titolo_gc_europe" href="{{link_url::316}}#uk" title="Ursula Kilkelly">Ursula Kilkelly</a>, University College Cork
+        <br><a class="titolo_gc_europe" href="{{link_url::316}}#cda" title="Catalina Devandas Aguilar">Catalina Devandas Aguilar</a>, UN Special Rapporteur on persons with disabilities
+        <br><a class="titolo_gc_europe" href="{{link_url::316}}#mgt" title="Meskerem Geset Tachune">Meskerem Geset Tachunek</a>, UN Working Group on Discrimination against Women
+        <br><a class="titolo_gc_europe" href="{{link_url::316}}#sk" title="Stuart Kinner">Stuart Kinner</a>, University of Melbourne -->
           </p>
         </div>
       </div>
@@ -232,113 +268,32 @@
 
 <ul class="timeline">
     <li>
-      <div class="timeline-badge sixth6">3</div>
+      <div class="timeline-badge sixth6">7</div>
       <div class="timeline-panel">
         <div class="timeline-heading">
-          <h4 class="timeline-title">2 - 8 December 2019</h4>
-          <h4 class="timeline-title">Administration of justice</h4>
+          <h4 class="timeline-title">8 – 14 June 2020</h4>
+          <h4 class="timeline-title">Historical cut, formats and contents of memory sites; institutional design and testimonial reconstruction</h4>
         </div>
          <div class="timeline-body">
 	      	<p> 
-            <br><a class="titolo_gc_europe" href="{{link_url::316}}#mb" title="Moritz Birk">Moritz Birk</a>, Ludwig Boltzmann Institute of Human Rights 
-      		<br><a class="titolo_gc_europe" href="{{link_url::316}}#hs" title="Helmut Sax">Helmut Sax</a>, Ludwig Boltzmann Institute of Human Rights 
+            <br><a class="titolo_gc_europe" href="{{link_url::316}}#mb" title="Alejandra Naftal">Alejandra Naftal</a>,Executive Director and co-curator of the ESMA Memory Site Museum 
 	      	</p>
 	  	</div>
       </div>
     </li>
     <li class="timeline-inverted">
-      <div class="timeline-badge third3">4</div>
-      <div class="timeline-panel">
-        <div class="timeline-heading">
-          <h4 class="timeline-title">9 - 15 December 2019</h4>
-          <h4 class="timeline-title">Places of detention with caregivers</h4>
-        </div>
-        <div class="timeline-body">
-	      <p>
-		    <br><a class="titolo_gc_europe" href="{{link_url::316}}#ca" title="Chiara Altafin">Chiara Altafin</a>, Global Campus of Human Rights
-      	  </p>
-        </div>
-      </div>
-    </li>
-	<li>
-      <div class="timeline-badge third3">5</div>
-      <div class="timeline-panel">
-        <div class="timeline-heading">
-          <h4 class="timeline-title">16 - 22 December 2019</h4>
-          <h4 class="timeline-title">Migration related reasons</h4>
-        </div>
-        <div class="timeline-body">
-	      <p>
-		    <br><a class="titolo_gc_europe" href="{{link_url::316}}#mb" title="-	Michael Bochenek">-	Michael Bochenek</a>, Human Rights Watch
-		  </p>
-        </div>
-      </div>
-    </li>
-	<li class="timeline-inverted">
-      <div class="timeline-badge third3">6</div>
-      <div class="timeline-panel">
-        <div class="timeline-heading">
-          <h4 class="timeline-title">23 - 29 December 2019</h4>
-          <h4 class="timeline-title">Institutions</h4>
-        </div>
-        <div class="timeline-body">
-	      <p>
-		    <br><a class="titolo_gc_europe" href="{{link_url::316}}#as" title="Ann Skelton">Ann Skelton</a>, University of Pretoria/CRC Committee
-		  </p>
-        </div>
-      </div>
-    </li>
-	<li>
-      <div class="timeline-badge third3">7</div>
-      <div class="timeline-panel">
-        <div class="timeline-heading">
-          <h4 class="timeline-title">30 December 2019 – 5 January 2020</h4>
-          <h4 class="timeline-title">Armed conflicts</h4>
-        </div>
-        <div class="timeline-body">
-	      <p>
-		    <br><a class="titolo_gc_europe" href="{{link_url::316}}#jb" title="Jo Becker">Jo Becker</a>, Human Rights Watch
-          </p>
-        </div>
-      </div>
-    </li>
-	<li class="timeline-inverted">
       <div class="timeline-badge third3">8</div>
       <div class="timeline-panel">
         <div class="timeline-heading">
-          <h4 class="timeline-title">6 - 12 January 2020</h4>
-          <h4 class="timeline-title">National security</h4>
+          <h4 class="timeline-title">15 – 21 June 2020</h4>
+          <h4 class="timeline-title">Symbolic resources, use of artistic language, significance of objects and stagings</h4>
         </div>
         <div class="timeline-body">
-	      <p>
-		    <br><a class="titolo_gc_europe" href="{{link_url::316}}#jb" title="Jo Becker">Jo Becker</a>, Human Rights Watch
-          </p>
-        </div>
-      </div>
-    </li>   
-</ul>
-
-<h3 id="timeline" style="text-align:center; font-weight: 400;">Module 4 - The Global Study in practice</h3>
-
-<ul class="timeline">
-    <li>
-      <div class="timeline-badge first1">9</div>
-      <div class="timeline-panel">
-        <div class="timeline-heading">
-          <h4 class="timeline-title">13 - 19 January 2020</h4>
-          <h4 class="timeline-title">Behind the scenes and recommendations </h4>
-        </div>
-        <div class="timeline-body">
-        	<p>
-            <br><a class="titolo_gc_europe" href="{{link_url::316}}#mn" title="Manfred Nowak">Manfred Nowak</a>, SG Global Campus of Human Rights / Global Study Independent Expert
-            <br><a class="titolo_gc_europe" href="{{link_url::316}}#gy" title="Georges Younes">Georges Younes</a>, Global Study Coordination Team
-            <br><a class="titolo_gc_europe" href="{{link_url::316}}#mk" title="Manu Krishan">Manu Krishan</a>, Global Study Coordination Team
-            <br><a class="titolo_gc_europe" href="{{link_url::316}}#ls" title="Łukasz Szoszkiewicz">Łukasz Szoszkiewicz</a>, Adam Mickewicz University
-            <br><a class="titolo_gc_europe" href="{{link_url::316}}#bvk" title="Benoit van Keirsbilck">Benoit van Keirsbilck</a>, Defence for Children International
-          	</p>
+  	      <p>
+  		      <br><a class="titolo_gc_europe" href="{{link_url::316}}#jh" title="Jasminko Halilovic">Jasminko Halilovic</a>, Founder and Director of the War Childhood Museum
+            <br><a class="titolo_gc_europe" href="{{link_url::316}}#jh" title="Tarik Samarah">Tarik Samarah</a>, Photographer and Founder of the Memorial Gallery
+        	</p>
         </div>
       </div>
     </li>
-
-
 </ul>
