--- a/website/mshr/lecturers.html
+++ b/website/mshr/lecturers.html
@@ -97,7 +97,7 @@
         </div>
     </div>
     <a class="person-link" id="jg"></a>
-    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Jeremy_Gunn_global_campus_eiuc.jpg" alt="Jasminko Halilovic - Global Campus">
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Jeremy_Gunn_global_campus_eiuc.jpg" alt="T. Jeremy Gunn - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_arab"><span class="maiuscoletto">arma</span> Lecturer</p>
             <p class="subtitle_page_programme margin_bottom_20">T. Jeremy Gunn</p>
