fixed links on outline Naftal & Samarah

--- a/website/mshr/course-outline.html
+++ b/website/mshr/course-outline.html
@@ -276,7 +276,7 @@
         </div>
          <div class="timeline-body">
 	      	<p> 
-            <br><a class="titolo_gc_europe" href="{{link_url::316}}#mb" title="Alejandra Naftal">Alejandra Naftal</a>,Executive Director and co-curator of the ESMA Memory Site Museum 
+            <br><a class="titolo_gc_europe" href="{{link_url::316}}#an" title="Alejandra Naftal">Alejandra Naftal</a>, Executive Director and co-curator of the ESMA Memory Site Museum 
 	      	</p>
 	  	</div>
       </div>
@@ -291,7 +291,7 @@
         <div class="timeline-body">
   	      <p>
   		      <br><a class="titolo_gc_europe" href="{{link_url::316}}#jh" title="Jasminko Halilovic">Jasminko Halilovic</a>, Founder and Director of the War Childhood Museum
-            <br><a class="titolo_gc_europe" href="{{link_url::316}}#jh" title="Tarik Samarah">Tarik Samarah</a>, Photographer and Founder of the Memorial Gallery
+            <br><a class="titolo_gc_europe" href="{{link_url::316}}#ts" title="Tarik Samarah">Tarik Samarah</a>, Photographer and Founder of the Memorial Gallery
         	</p>
         </div>
       </div>
