week titles reworked

--- a/website/mshr/course-outline.html
+++ b/website/mshr/course-outline.html
@@ -139,6 +139,9 @@
 	font-weight: 400;
 	text-align: center;
 }
+.timeline-subtitle{
+  font-weight: 300;
+}
 
 
 </style>
@@ -153,7 +156,7 @@
       <div class="timeline-panel">
         <div class="timeline-heading">
           <h4 class="timeline-title">27 April – 3 May 2020</h4>
-          <h4 class="timeline-title">Why and what we remember: The dialogue between memory, history and human rights</h4>
+          <h4 class="timeline-title">Why and what we remember<br><span class="timeline-subtitle">The dialogue between memory, history and human rights</span></h4>
         </div>
         <div class="timeline-body">
         	<p>
@@ -171,7 +174,7 @@
       <div class="timeline-panel">
         <div class="timeline-heading">
           <h4 class="timeline-title">4 – 10 May 2020</h4>
-          <h4 class="timeline-title">How we remember: Memories as (de)construction of historical injustices</h4>
+          <h4 class="timeline-title">How we remember<br><span class="timeline-subtitle">Memories as (de)construction of historical injustices</span></h4>
         </div>
         <div class="timeline-body">
         <p>
@@ -189,7 +192,7 @@
       <div class="timeline-panel">
         <div class="timeline-heading">
           <h4 class="timeline-title">11 – 17 May 2020</h4>
-          <h4 class="timeline-title">Who remembers: Memorialisation as reconstruction and democratisation tool</h4>
+          <h4 class="timeline-title">Who remembers<br><span class="timeline-subtitle">Memorialisation as reconstruction and democratisation tool</span></h4>
         </div>
         <div class="timeline-body">
           <p>
@@ -212,7 +215,7 @@
       <div class="timeline-panel">
         <div class="timeline-heading">
           <h4 class="timeline-title">18 – 24 May 2020</h4>
-          <h4 class="timeline-title">Competing histories and truths: challenges in the creation of memory sites</h4>
+          <h4 class="timeline-title">Competing histories and truths<br><span class="timeline-subtitle">Challenges in the creation of memory sites</span></h4>
         </div>
         <div class="timeline-body">
 	      <p>
@@ -230,7 +233,7 @@
       <div class="timeline-panel">
         <div class="timeline-heading">
           <h4 class="timeline-title">25 – 31 May 2020</h4>
-          <h4 class="timeline-title">Memory and (re)construction of identity knowledge</h4>
+          <h4 class="timeline-title">Memory and (re)construction of identity knowledge<br><span class="timeline-subtitle">Identities and memory</span></h4>
         </div>
         <div class="timeline-body">
           <p>
@@ -248,7 +251,7 @@
       <div class="timeline-panel">
         <div class="timeline-heading">
           <h4 class="timeline-title">1 – 7 June 2020</h4>
-          <h4 class="timeline-title">Sites of conscience: forum for dialogue, inspiration and action</h4>
+          <h4 class="timeline-title">Sites of conscience: forum for dialogue, inspiration and action<br><span class="timeline-subtitle">Purposes of memory sites</span></h4>
         </div>
         <div class="timeline-body">
         <p>
@@ -272,7 +275,7 @@
       <div class="timeline-panel">
         <div class="timeline-heading">
           <h4 class="timeline-title">8 – 14 June 2020</h4>
-          <h4 class="timeline-title">Historical cut, formats and contents of memory sites; institutional design and testimonial reconstruction</h4>
+          <h4 class="timeline-title">Historical cut, formats and contents of memory sites<br><span class="timeline-subtitle">Institutional design and testimonial reconstruction</span></h4>
         </div>
          <div class="timeline-body">
 	      	<p> 
@@ -286,7 +289,7 @@
       <div class="timeline-panel">
         <div class="timeline-heading">
           <h4 class="timeline-title">15 – 21 June 2020</h4>
-          <h4 class="timeline-title">Symbolic resources, use of artistic language, significance of objects and stagings</h4>
+          <h4 class="timeline-title">Symbolic resources, use of artistic language, significance of objects and stagings<br><span class="timeline-subtitle">Memorialisation projects</span></h4>
         </div>
         <div class="timeline-body">
   	      <p>
