pre-social media editing

--- a/website/mshr/media-toolkit.html
+++ b/website/mshr/media-toolkit.html
@@ -1,8 +1,9 @@
 <!-- START VIDEO TRAILER -->
 <div class="video169_container">
-    <iframe class="video169" src="https://player.vimeo.com/video/252703080" frameborder="0" allowfullscreen="">
+    <iframe class="video169" src="https://player.vimeo.com/video/252703080" frameborder="0" allowfullscreen=""></iframe>
 </div>
 <!-- END VIDEO TRAILER -->
+
 
 
 <!-- START VIDEO TEASER DOWNLOAD -->
@@ -17,8 +18,76 @@
             </div>
         </div>
         <div class="list_accordion">
-            <p class="margin_bottom_20 ">Vimeo Video Teaser: <a class="titolo_gc_europe" href="https://player.vimeo.com/video/252703080" target="_blank">https://player.vimeo.com/video/252703080</a></p>
+            <p class="margin_bottom_20 ">Vimeo Video Teaser: <a class="titolo_gc_europe" href="https://vimeo.com/252703080" target="_blank">https://vimeo.com/252703080</a></p>
         </div>
     </div>
 </div>
 <!-- END VIDEO TEASER DOWNLOAD -->
+
+
+
+<!-- START POSTER -->
+<div class="table_accordion_cell">
+    <div class="accordion accordion_gc">
+        <div class="icon_e_title_accordion">
+            <p class="title_accordion">Poster</p>
+            <p class="number_universities">[nbsp]</p>
+            <div class="piu_accordion">
+                <div class="verticale">[nbsp]</div>
+                <div class="orizzontale">[nbsp]</div>
+            </div>
+        </div>
+        <div class="list_accordion">
+            <p class="margin_bottom_20">This document contains the official Poster for the MOOC on <em>Memory Sites and Human Rights</em>. It can be printed[nbsp]on both sides[nbsp]and in different sizes [from A5 (148 × 210 mm) to A2 (420 x 594 mm)]</p>
+            <div class="box_vertical_a4_container"><iframe class="box_vertical_a4" src="https://drive.google.com/file/d/1evvxfDKIQlvV0An9607u2-k0Jr_defeO/preview"></iframe></div>
+            <p>[nbsp]</p>
+            <div class="download"><a href="https://drive.google.com/open?id=1evvxfDKIQlvV0An9607u2-k0Jr_defeO" target="_blank"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+                <p class="titolo_gc_europe"><a class="download" href="https://drive.google.com/open?id=1evvxfDKIQlvV0An9607u2-k0Jr_defeO" target="_blank">Download</a></p>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- END POSTER -->
+
+
+
+<!-- START INFO SHEET -->
+<div class="table_accordion_cell">
+    <div class="accordion accordion_gc">
+        <div class="icon_e_title_accordion">
+            <p class="title_accordion">Info Sheet</p>
+            <p class="number_universities">[nbsp]</p>
+            <div class="piu_accordion">
+                <div class="verticale">[nbsp]</div>
+                <div class="orizzontale">[nbsp]</div>
+            </div>
+        </div>
+        <div class="list_accordion">
+            <p class="margin_bottom_20">This document contains the official Info Sheet about the MOOC on <em>Memory Sites and Human Rights</em>. It can be printed in different sizes [from A5 (148 × 210 mm) to A2 (420 x 594 mm)]</p>
+            <div class="box_vertical_a4_container"><iframe class="box_vertical_a4" src="https://drive.google.com/file/d/1PmCiTG1FfZb1YAQK1dih8z5LaKFznirA/preview"></iframe></div>
+            <p>[nbsp]</p>
+            <div class="download"><a href="https://drive.google.com/open?id=1PmCiTG1FfZb1YAQK1dih8z5LaKFznirA" target="_blank"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+                <p class="titolo_gc_europe"><a class="download" href="https://drive.google.com/open?id=1PmCiTG1FfZb1YAQK1dih8z5LaKFznirA" target="_blank">Download</a></p>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- END INFO SHEET -->
+
+
+
+<!-- START FACEBOOK -->
+{{file::eiuc/promo-mshr-2020/fb-posts.php}}
+<!-- END FACEBOOK -->
+
+
+
+<!-- START TWITTER -->
+{{file::eiuc/promo-mshr-2020/fb-posts.php}}
+<!-- END TWITTER -->
+
+
+
+<!-- START INSTAGRAM -->
+{{file::eiuc/promo-mshr-2020/fb-posts.php}}
+<!-- END INSTAGRAM -->
