fixed file names on all includes

--- a/website/mshr/media-toolkit.html
+++ b/website/mshr/media-toolkit.html
@@ -83,11 +83,18 @@
 
 
 <!-- START TWITTER -->
-{{file::eiuc/promo-mshr-2020/fb-posts.php}}
+{{file::eiuc/promo-mshr-2020/tw-posts.php}}
 <!-- END TWITTER -->
 
 
 
 <!-- START INSTAGRAM -->
-{{file::eiuc/promo-mshr-2020/fb-posts.php}}
+{{file::eiuc/promo-mshr-2020/insta-posts.php}}
 <!-- END INSTAGRAM -->
+
+
+
+
+<!-- START PICTURES -->
+{{file::eiuc/promo-mshr-2020/img-posts.php}}
+<!-- END PICTURES -->
