final commit mediatoolkit.html

--- a/website/mshr/media-toolkit.html
+++ b/website/mshr/media-toolkit.html
@@ -98,3 +98,51 @@
 <!-- START PICTURES -->
 {{file::eiuc/promo-mshr-2020/img-posts.php}}
 <!-- END PICTURES -->
+
+
+
+<!-- START PICTURES (MEDIA KIT) -->
+<div class="table_accordion_cell">
+    <div class="accordion accordion_gc">
+        <div class="icon_e_title_accordion">
+            <p class="title_accordion">Pictures (Media Kit)</p>
+            <p class="number_universities">[nbsp]</p>
+            <div class="piu_accordion">
+                <div class="verticale">[nbsp]</div>
+                <div class="orizzontale">[nbsp]</div>
+            </div>
+        </div>
+        <div class="list_accordion">
+            <p class="margin_bottom_20">This archive contains some pictures in high resolution that can be used on website, social media and printed materials.</p>
+            <p>[nbsp]</p>
+            <div class="download"><a href="files/eiuc/moocs/mshr/MOOC-MSHR-2020-Pictures.zip" target="_blank"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+                <p class="titolo_gc_europe"><a class="download" href="files/eiuc/moocs/mshr/MOOC-MSHR-2020-Pictures.zip" target="_blank">Download</a></p>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- END PICTURES (MEDIA KIT) -->
+
+
+
+<!-- START NEWSLETTER -->
+<div class="table_accordion_cell">
+    <div class="accordion accordion_gc">
+        <div class="icon_e_title_accordion">
+            <p class="title_accordion">Newsletter</p>
+            <p class="number_universities">[nbsp]</p>
+            <div class="piu_accordion">
+                <div class="verticale">[nbsp]</div>
+                <div class="orizzontale">[nbsp]</div>
+            </div>
+        </div>
+        <div class="list_accordion">
+            <p class="margin_bottom_20">This document contains the newsletter that can be used on <a class="titolo_gc_europe" href="https://mailchimp.com" target="_blank">MailChimp</a> or any other Mass mailing system that supports HTML emails.</p>
+            <p>[nbsp]</p>
+            <div class="download"><a href="files/eiuc/moocs/mshr/newsletter-mooc-mshr.zip" target="_blank"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+                <p class="titolo_gc_europe"><a class="download" href="files/eiuc/moocs/mshr/newsletter-mooc-mshr.zip" target="_blank">Download</a></p>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- END NEWSLETTER-->
