fixed spacing in lecturers page mshr

--- a/website/moocs/mshr/lecturers.html
+++ b/website/moocs/mshr/lecturers.html
@@ -7,6 +7,7 @@
     width: 0;
 }
 </style>
+<div class="ce_text description_page_programme block show">
 <div class="table_accordion">
     <a class="person-link" id="ms"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Maria_Sondereguer_global_campus_eiuc.jpg" alt="María Sonderéguer - Global Campus">
@@ -315,3 +316,4 @@
         </div>
     </div>
 </div>
+<div class="ce_text description_page_programme block show">
