--- a/edx-abouts/mooc-mshr.html
+++ b/edx-abouts/mooc-mshr.html
@@ -220,7 +220,7 @@ h3{
 <div class="ce_text description_page_programme block">
     <p class="subtitle_page_programme">Lecturers and Experts</p>
 
-    <p class="margin_bottom_20">The MOOC has been designed in close cooperation with the UN Global Study Team. The faculty includes, among others:</p>
+    <p class="margin_bottom_20">The course has been developed under the leadership of the Master's Programme in Human Rights and Democratisation in Latin America and the Caribbean (LATMA) and the European Regional Master's Programme in Democracy and Human Rights in South East Europe (ERMA). The faculty includes, among others</p>
     <div class="row col-12">
         <div class="col">
             &nbsp;
