--- a/website/moocs/mshr/course-outline.html
+++ b/website/moocs/mshr/course-outline.html
@@ -1,4 +1,4 @@
-<p class="margin_bottom_20">The course encompasses a 8-week period. Participants are expected to engage in approximately 40 hours of active learning through readings, videos, discussions, group-work/role-plays and quizzes. </p>
+<p class="margin_bottom_20">Materials and discussions are released on a weekly basis.Here below is a detailed outline of the course with dates, content and teaching faculty.</p>
 
 <p class="margin_bottom_20">[nbsp]</p>
 
