added <span class="titolo_gc_*"> so the link color can be changed

--- a/edx-abouts/mooc-mshr.html
+++ b/edx-abouts/mooc-mshr.html
@@ -220,7 +220,7 @@ h3{
 <div class="ce_text description_page_programme block">
     <p class="subtitle_page_programme">Lecturers and Experts</p>
 
-    <p class="margin_bottom_20">The course has been developed under the leadership of the Master's Programme in Human Rights and Democratisation in Latin America and the Caribbean (<a href="https://gchumanrights.org/education/regional-programmes/latma/academic-programme-and-curriculum.html" target="_blank" class="titolo_gc_latin_america">LATMA</a>) and the European Regional Master's Programme in Democracy and Human Rights in South East Europe (<a href="https://gchumanrights.org/education/regional-programmes/erma/about.html" target="_blank" class="titolo_gc_south_east_europe">ERMA</a>). The faculty includes, among others</p>
+    <p class="margin_bottom_20">The course has been developed under the leadership of the Master's Programme in Human Rights and Democratisation in Latin America and the Caribbean (<a href="https://gchumanrights.org/education/regional-programmes/latma/academic-programme-and-curriculum.html" target="_blank" class="titolo_gc_latin_america"><span class="titolo_gc_latin_america">LATMA</span></a>) and the European Regional Master's Programme in Democracy and Human Rights in South East Europe (<a href="https://gchumanrights.org/education/regional-programmes/erma/about.html" target="_blank" class="titolo_gc_south_east_europe"><span class="titolo_gc_south_east_europe">ERMA</span></a>). The faculty includes, among others</p>
     <div class="row col-12">
         <div class="col">
             &nbsp;
