modified Barbuto bio

--- a/website/moocs/mshr/lecturers.html
+++ b/website/moocs/mshr/lecturers.html
@@ -39,7 +39,7 @@
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_latin_america">Anthropologist</p>
             <p class="subtitle_page_programme margin_bottom_20">Valeria Barbuto</p>
-            <p class="margin_bottom_20">Valeria Barbuto is an Anthropologist (UBA), with postgraduate studies in cultural management (IDAES-UNSAM) and human rights and democratization (University of Chile). She is a member of the Team on Political and Legal Anthropology of the University of Buenos Aires.</p>
+            <p class="margin_bottom_20">Valeria Barbuto is an Anthropologist (UBA), with postgraduate studies in cultural management (IDAES-UNSAM) and human rights and democratization (University of Chile). She is a member of the Team on Political and Legal Anthropology of the University of Buenos Aires and a member of the Institute of Justice and Human Rights of the Universidad Nacional de Lanús (IJDH-UNLa)..</p>
             <div class="text_read_more">
                 <p class="margin_bottom_20">She has been a director of Memoria Abierta and has been a member of the Center for Legal and Social Studies (CELS) in Argentina. She is a Board Member of the Memory Site for the Promotion and Defense of Human Rights [ex ESMA].</p>
                 <p>She has participated in numerous projects on human rights archives; construction of a collective memory on State Terrorism; reparation policies for victims; truth and justice processes on serious human rights violations; and approaches to these issues from a gender perspective.</p>
