Modified bio of Dureinovic

--- a/website/moocs/mshr/lecturers.html
+++ b/website/moocs/mshr/lecturers.html
@@ -79,12 +79,13 @@
     <a class="person-link" id="jd"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Jelena_Dureinovic_global_campus_eiuc.jpg" alt="Jelena Đureinović - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
-            <p class="ruolo_persona titolo_gc_south_east_europe">PhD Candidate at Justus Liebig University</p>
+            <p class="ruolo_persona titolo_gc_south_east_europe">Memorialisation Program Coordinator at the Humanitarian Law Center in Belgrade</p>
             <p class="subtitle_page_programme margin_bottom_20">Jelena Đureinović</p>
-            <p class="margin_bottom_20">Jelena Đureinović is a doctoral candidate at the International Graduate Centre for the Study of Culture and in the Department of History at Justus Liebig University in Giessen, Germany, where she has also taught undergraduate courses in Eastern European History.</p>
+            <p class="margin_bottom_20">Jelena Đureinović is the Memorialisation Program Coordinator at the Humanitarian Law Center in Belgrade, Serbia. She holds a PhD in Modern and Contemporary History from Justus Liebig University in Giessen, Germany, where she also lectured. </p>
             <div class="text_read_more">
-                <p class="margin_bottom_20">She holds a Master of Arts degree in Nationalism Studies from Central European University in Budapest and a BA degree from the University of Novi Sad. She has been a visiting researcher at the University of Belgrade, the Research Centre of the Slovenian Academy of Sciences and Arts and at the Centre for Southeast European Studies at the University of Graz.</p>
-                <p>Her current research deals with the history of memory of the Second World War in Yugoslavia and the post-Yugoslav space. Her research interests revolve around contemporary history and memory studies. She was given the Best Doctoral Student Paper Award by the Association for the Study of Nationalities in 2015 for her paper on the rehabilitation of the Chetnik movement in Serbia.</p>
+                <p class="margin_bottom_20">She was a visiting researcher at the National University of Ireland in Galway, the Centre for Southeast European Studies at the University of Graz and Slovenian Academy of Sciences. Her main interests include memory studies, nationalism studies, history of Yugoslavia and the post-Yugoslav space.  </p>
+                <p class="margin_bottom_20">Her book <em>The Politics of Memory of the Second World War in Contemporary Serbia: Collaboration, Resistance and Retribution</em> was published with Routledge in 2019.</p>
+            	<p>She holds an MA degree in Nationalism Studies from Central European University in Budapest. She has completed several courses on oral history, international humanitarian law and dealing with the past.</p>
             </div>
             <div class="accordion accordion_gc_south_europe read_more">
                 <div class="icon_e_title_accordion">
