Various mods for MSHR trailer

--- a/website/moocs/mshr/media-toolkit.html
+++ b/website/moocs/mshr/media-toolkit.html
@@ -1,6 +1,6 @@
 <!-- START VIDEO TRAILER -->
 <div class="video169_container">
-    <iframe class="video169" src="https://player.vimeo.com/video/252703080" frameborder="0" allowfullscreen=""></iframe>
+    <iframe class="video169" src="https://www.youtube.com/embed/U3oXmSNxPZw" frameborder="0" allowfullscreen=""></iframe>
 </div>
 <!-- END VIDEO TRAILER -->
 
@@ -18,7 +18,7 @@
             </div>
         </div>
         <div class="list_accordion">
-            <p class="margin_bottom_20 ">Vimeo Video Teaser: <a class="titolo_gc_europe" href="https://vimeo.com/252703080" target="_blank">https://vimeo.com/252703080</a></p>
+            <p class="margin_bottom_20 ">Youtube Video Teaser: <a class="titolo_gc_europe" href="https://youtu.be/U3oXmSNxPZw" target="_blank">https://youtu.be/U3oXmSNxPZw</a></p>
         </div>
     </div>
 </div>
