--- a/edx-abouts/mooc-mshr.html
+++ b/edx-abouts/mooc-mshr.html
@@ -68,7 +68,7 @@ h3{
 <p class="margin_bottom_20">As witnesses and testimonies of abuse and horror, memory sites aspire to build reflection, teaching and learning, critical memory and non-repetition. Memory is dynamic and constantly evolving, so memory sites function as places where to look at the past to better understand and shape the present and the future of a society and its approach to human rights. As “sites of conscience” drawing on history lessons, memory sites stimulate dialogue and healing, and inspire citizens’ action.</p>
 
 <p>&nbsp;</p>
-<div class="video169_container"><iframe class="video169" src="https://player.vimeo.com/video/252703080?title=0&byline=0&portrait=0" frameborder="0" allowfullscreen="">
+<div class="video169_container"><iframe class="video169" src="https://www.youtube.com/embed/U3oXmSNxPZw" frameborder="0" allowfullscreen="">
 </iframe></div></div>
 
 <div class="ce_text description_page_programme block">
