fixed Grebo + Sondereguer (about & lecturers pages)

--- a/edx-abouts/mooc-mshr.html
+++ b/edx-abouts/mooc-mshr.html
@@ -557,13 +557,13 @@ h3{
 
         <p class="margin_bottom_20">Maria Sonderéguer has a Bachelor of Arts from the University of Buenos Aires and a Diplôme d'Etudes Approfondies in Latin American Social Studies from La Sorbonne in Paris.</p>
 
-        <p class="margin_bottom_20">She is a full Professor at the University of Quilmes -PhD equivalent-- and Researcher at the Center for Studies in History, Culture and Memory of that University of Quilmes.</p>
+        <p class="margin_bottom_20">She is a full Professor at the University of Quilmes -PhD equivalent-- and Researcher at the Center for Studies in History, Culture and Memory of that University of Quilmes. She is member of the  Comisión Provincial por la Memoria de la Provincia de Buenos Aires.</p>
 
         <p class="margin_bottom_20">She has been a Director of the "Emilio Mignone" Human Rights Center and she is currently the director of the Gender, Memory and Human Rights Observatory.</p>
 
         <p class="margin_bottom_20">She is a lecturer in several Postgraduate Programs in Argentina and a member of the Academic Committee of the Specialization in Gender, Public Policies and Society of the National University of Lanús. She is an Academic Committee member of the Masters`s in Human Rights and Democratization in Latin America and the Caribbean of the Global Campus of Human Rights.</p>
 
-        <p class="margin_bottom_20">Maria Sonderéguer lectures on Culture for Peace and Human Rights at the Faculty of Social Sciences of the University of Buenos Aires, in the Chair of Peace Nobel Prize Adolfo Pérez Esquivel. She is member of the Human Rights Research Network of CONICET and the National Human Rights Secretariat.</p>
+        <p class="margin_bottom_20">Maria Sonderéguer lectures on Culture for Peace and Human Rights at the Faculty of Social Sciences of the University of Buenos Aires, in the Chair of Peace Nobel Prize Adolfo Pérez Esquivel. She was member of the Human Rights Research Network of CONICET and the National Human Rights Secretariat.</p>
 
         <p class="margin_bottom_20">She participated actively in the drafting of the National Plan against Discrimination of Argentina and she held the position of National Director of Training in Human Rights of the Secretariat of Human Rights of the Ministry of Justice of Argentina.</p>
 
