Fees initial commit

--- a/website/chra/prgramme-2020-new.html
+++ b/website/chra/prgramme-2020-new.html
@@ -14,7 +14,11 @@
     }
     </style>
     <p class="subtitle_page_programme">Programme</p>
-    <p class="margin_bottom_20">The Summer School offers an exciting programme of lectures, film screenings, discussions, working groups and a storytelling workshop that combine human rights expertise, media studies and video advocacy strategies. The seven sessions develop issues relating to The Role of the Media and Films in Advancing Human Rights, a History of Human Rights Cinema, Freedom of Expression and Censorship, the Use of Video in Human Rights Documentation and Advocacy, The Role of the New Media during Conflict, Production of Social Documentaries and Impact Distribution. Each module is illustrated by film, digital media, or documentary screenings.</p>
+    <p class="margin_bottom_20">The Summer School offers an exciting programme of lectures, film screenings, discussions, working groups and a storytelling workshop that combine human rights expertise, media studies and video advocacy strategies. 
+    <!--
+      The seven sessions develop issues relating to The Role of the Media and Films in Advancing Human Rights, a History of Human Rights Cinema, Freedom of Expression and Censorship, the Use of Video in Human Rights Documentation and Advocacy, The Role of the New Media during Conflict, Production of Social Documentaries and Impact Distribution. Each module is illustrated by film, digital media, or documentary screenings.
+    -->    
+    </p>
     <p class="margin_bottomo_20">The storytelling workshop introduces storytelling and storyboarding key concepts, techniques and exercises that provide participants with the basic skills to develop a short film / media /advocacy project to be pitched during the school’s final session. For the purpose of this workshop, participants will work and be tutored in small groups.</p>
     <p class="margin_bottomo_20">As part of the programme participants are required to watch and analyse a selection of human rights related screenings at the 77<sup>th</sup> Venice International Film Festival. Whenever possible, filmmakers, jury members and critics from the cinema world are invited to discuss their work with the Summer School participants. Participants will be given a Cinema category accreditation pass to the Film Festival giving access to a selection of festival screenings.</p>
     <p class="margin_bottom_20">The school programme may be subject to changes during the film festival period in order to accommodate festival screenings and meetings with festival’s personalities with teaching sessions.</p>
